# musicroast

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test_endpoints.py
.cursor/rules/: system-prompt.mdc
app/: __init__.py  bot.py  config.py  token_storage.py
app/models/: __init__.py  auth.py  requests.py  track.py
app/prompts/: __init__.py  manager.py
app/services/: __init__.py  gemini.py  music_roast.py  track_normalizer.py  yandex_interactive.py  yandex_oauth.py
app/streaming/: __init__.py  apple.py  base.py  spotify.py  yandex.py
app/utils/: __init__.py  markdown.py  oauth.py
static/miniapp/: yandex_oauth.html
