[project]
name = "musicroast"
version = "0.1.0"
description = ""
authors = [
    {name = "Vyacheslav Guch",email = "ssslllava11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yandex-music"
    , "python-dotenv"
    , "xai-sdk"
    , "fastapi>=0.104.0"
    , "uvicorn>=0.24.0"
    , "pydantic>=2.4.2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
