[tool.poetry]
name = "musicroast"
version = "0.1.0"
description = ""
authors = ["Vyacheslav Guch <ssslllava11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
yandex-music = "*"
python-dotenv = "*"
google-genai = "*"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
pydantic = ">=2.4.2"
pillow = "*"
aiogram = ">=3.4.1,<4.0.0"
selenium = ">=4.19.0,<5.0.0"
webdriver-manager = ">=4.0.1,<5.0.0"
httpx = ">=0.27.0,<0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
